# portfolio_1

./: .gitignore  ARCHITECTURE.md  README.md  STACK.md  check_dupes.py  pyproject.toml  read_xlsx.py  start.command
.claude/: launch.json  settings.local.json
.gsd/: ARCHITECTURE.md  DEBUG.md
config/: agent-personas.yaml  audience-agents.yaml  founder-auth.yaml.example  founder-permissions.yaml  models-config.json  quality-rules.yaml
data/: blogs.db  schedules.json
deploy/: RUNBOOK.md  bootstrap.sh  ci-deploy.sh  gcp_setup_playwright.py  git-poll.sh  nginx.conf  provision.sh  pull-vps-data.sh  push-local-data.sh  setup_google.sh  tagent-poll.service  tagent-poll.timer  tagent.service
digital_dna.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: bw_fix.py  bw_fix2.py  bw_sweep.py  compare_graphs.py  extract_docx_table.py  extract_revsure_qa.py  index_sharath_rag.py  inject_source_posts.py  inspect_xlsx.py  precompute_post_embeddings.py  read_docx.py  read_docx_full.py  run_manisha_loop.py  smoke_test_auth.py  smoke_test_dissect_v6_1.py  smoke_test_full_batch_manisha.py  test_auth.py  test_pipeline_config.py  upload_ssh_key.py
src/: cli.py
tests/: test_generation.py  test_graph.py  test_humanization.py  test_ingestion.py
tools/: migrate_founder_layout.py
webapp/: app.js  auth_middleware.py  auth_routes.py  blog_routes.py  chat_routes.py  customize_routes.py  deploy_routes.py  index.html  models_routes.py  os_routes.py  pack_routes.py  revsure_routes.py  (+4 more)
webapp-react/: index.html  package-lock.json  package.json  vite.config.ts
(+488 files in other folders)
